--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "zorn"
+authors = ["Viktor Kleen <viktor@kleen.org>"]
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+anyhow = "1.0.62"
+clap = { version = "3.2.17", features = ["derive", "cargo"] }
+clap_complete = "3.2.4"
+env_logger = "0.9.0"
+log = "0.4.17"
+paste = "1.0.8"
