--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,19 @@ authors = ["Viktor Kleen <viktor@kleen.org>"]
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+
 [dependencies]
 anyhow = "1.0.62"
-clap = { version = "3.2.17", features = ["derive", "cargo"] }
+clap = { version = "3.2.17", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
 clap_complete = "3.2.4"
-env_logger = "0.9.0"
-log = "0.4.17"
+getrandom = "0.2.7"
+indoc = "1.0.7"
 paste = "1.0.8"
+tracing = "0.1.36"
+tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
+zorn-core = { path = "zorn_core" }
+
+[dev-dependencies]
+assert_cmd = "2.0.4"
+predicates = "2.1.1"
