--- a/zorn_core/Cargo.toml
+++ b/zorn_core/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 
 [dependencies]
 x25519-dalek = "1.2.0"
-zeroize = { version = "1.3", features = ["zeroize_derive"] }
-rand = "0.8.5"
+zeroize = { version = ">=1, <1.4", features = ["zeroize_derive"] }
 subtle = "2.4.1"
+rand_core = "0.5.1"
+blake3 = "1.3.1"
+
+[dev-dependencies]
+hex-literal = "0.3.4"
+
