--- a/zorn_core/Cargo.toml
+++ b/zorn_core/Cargo.toml
@@ -10,6 +10,9 @@ zeroize = { version = ">=1, <1.4", features = ["zeroize_derive"] }
 subtle = "2.4.1"
 rand_core = "0.5.1"
 blake3 = "1.3.1"
+aead = "0.5.1"
+chacha20 = "0.9.0"
+cipher = "0.4.3"
 
 [dev-dependencies]
 hex-literal = "0.3.4"
