--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 
 [workspace]
 
+[patch.crates-io]
+x25519-dalek = { path = "nih/x25519-dalek" }
+curve25519-dalek = { path = "nih/curve25519-dalek" }
+
 [dependencies]
 anyhow = "1.0.62"
 clap = { version = "3.2.17", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
