--- a/zorn_core/Cargo.toml
+++ b/zorn_core/Cargo.toml
@@ -7,12 +7,17 @@ edition = "2021"
 [dependencies]
 x25519-dalek = { path = "../nih/x25519-dalek" }
 zeroize = { version = "1.5", features = ["zeroize_derive"] }
-subtle = "2.4.1"
-rand_core = "0.6.3"
-blake3 = "1.3.1"
-aead = "0.5.1"
-chacha20 = "0.9.0"
-cipher = "0.4.3"
+subtle = "2.4"
+rand_core = "0.6"
+blake3 = "1.3"
+aead = "0.5"
+chacha20 = "0.9"
+cipher = "0.4"
+bech32 = "0.9"
+thiserror = "1.0"
 
 [dev-dependencies]
-hex-literal = "0.3.4"
+hex-literal = "0.3"
+proptest = "1.0"
+proptest-derive = "0.3"
+opaque-debug = "0.3"
